--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,14 +12,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/tobyhs/codemention.git"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0"
