--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -31,7 +32,6 @@
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
-    "js-yaml": "^4.1.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
