--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
