--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@octokit/webhooks-types": "^7.0.2",
     "@types/node": "^18.16.3",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
