--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@octokit/webhooks-types": "^7.0.2",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.16.3",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
