--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
+    "moq.ts": "^10.0.6",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
