--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "parse-diff": "^0.11.1"
   },
   "devDependencies": {
     "@octokit/webhooks-types": "^7.0.2",
