--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "micromatch": "^4.0.4",
     "parse-diff": "^0.11.1"
   },
   "devDependencies": {
     "@octokit/webhooks-types": "^7.0.2",
     "@types/js-yaml": "^4.0.5",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "^18.16.3",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
