--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,12 @@
 name: codemention
 description: Mentions people who subscribe to file changes on pull requests
 author: Toby Hsieh
+
 inputs:
-  milliseconds: # change this
+  githubToken:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: GitHub API token
+
 runs:
   using: node18
   main: dist/index.js
