--- a/action.yml
+++ b/action.yml
@@ -8,5 +8,20 @@ inputs:
     description: GitHub API token
 
 runs:
-  using: node16
-  main: run.js
+  using: composite
+  steps:
+    - uses: actions/cache@v3
+      with:
+        path: ${{ github.action_path }}/node_modules
+        key: codemention-npm
+    - run: npm install
+      working-directory: ${{ github.action_path }}
+      shell: bash
+    - run: npm run build
+      working-directory: ${{ github.action_path }}
+      shell: bash
+    - run: node lib/main.js
+      working-directory: ${{ github.action_path }}
+      shell: bash
+      env:
+        INPUT_GITHUBTOKEN: "${{ inputs.githubToken }}"
