--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
     - run: npm run build
       working-directory: ${{ github.action_path }}
       shell: bash
-    - run: node lib/main.js
+    - run: node run.js
       working-directory: ${{ github.action_path }}
       shell: bash
       env:
