--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --coverage --collectCoverageFrom 'src/**/*.ts'",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm test"
   },
   "repository": {
     "type": "git",
@@ -35,7 +34,6 @@
     "@types/micromatch": "^4.0.2",
     "@types/node": "^18.19.0",
     "@typescript-eslint/parser": "^5.59.7",
-    "@vercel/ncc": "^0.36.1",
     "eslint": "^8.41.0",
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
