feat: add ability to set custom comment content

--- a/__tests__/fixtures/codemention.yml
+++ b/__tests__/fixtures/codemention.yml
@@ -1,3 +1,6 @@
+commentConfiguration:
+  preamble: 'testing preamble'
+  epilogue: 'testing epilogue'
 rules:
   - patterns: ['config/**']
     mentions: ['sysadmin']
