--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "test": "jest --coverage --collectCoverageFrom 'src/**/*.ts'",
-    "all": "npm run build && npm run format && npm run lint && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm test",
+    "ci": "npm run build && npm run format-check && npm run lint && npm test"
   },
   "repository": {
     "type": "git",
