--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - run: node --version
       - uses: actions/checkout@v4
       - run: npm install
       - run: npm run ci
