--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^6.0.0",
+    "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
     "markdown-escape": "^2.0.0",
     "micromatch": "^4.0.8"
