--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^30.1.3",
-    "moq.ts": "^10.0.6",
+    "jest-mock-extended": "^4.0.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.4.1",
     "typescript": "^5.0.4"
