--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint .",
     "test": "jest --coverage --collectCoverageFrom 'src/**/*.ts'",
     "all": "npm run build && npm run format && npm run lint && npm test",
     "ci": "npm run build && npm run format-check && npm run lint && npm test"
@@ -29,19 +29,23 @@
     "micromatch": "^4.0.8"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
     "@octokit/webhooks-types": "^7.0.2",
-    "@types/deep-equal": "^1.0.4",
     "@types/js-yaml": "^4.0.5",
     "@types/markdown-escape": "^1.1.3",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^20.17.22",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
-    "eslint-plugin-github": "^4.7.0",
-    "eslint-plugin-jest": "^27.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
     "jest": "^30.1.3",
     "jest-mock-extended": "^4.0.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
   }
