--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "es6",
+    "allowJs": true,
+    "target": "ES2022",
     "module": "commonjs",
     "outDir": "./lib",
     "rootDir": "./src",
