--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "private": true,
-  "main": "lib/main.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint .",
-    "test": "jest --coverage",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "all": "npm run build && npm run format && npm run lint && npm test",
     "ci": "npm run build && npm run format-check && npm run lint && npm test"
   },
@@ -21,8 +21,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^2.0.3",
-    "@actions/github": "^8.0.1",
+    "@actions/core": "^3.0.0",
+    "@actions/github": "^9.0.0",
     "handlebars": "^4.7.8",
     "js-yaml": "^4.1.1",
     "markdown-escape": "^2.0.0",
@@ -47,6 +47,7 @@
     "jest-mock-extended": "^4.0.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.1",
+    "ts-jest-resolver": "^2.0.1",
     "typescript": "^5.9.2"
   }
 }
