--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,7 +5,7 @@
     "allowJs": true,
     "noEmit": true
   },
-  "exclude": ["lib", "node_modules"],
+  "exclude": ["dist", "node_modules"],
   "include": [
     "__tests__",
     "src",
