Use `npm ci` instead of `npm install` in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - run: node --version
       - uses: actions/checkout@v6
-      - run: npm install
+      - run: npm ci
       - run: npm run ci
